--- a/cloudformation-monday-to-arduino.yaml
+++ b/cloudformation-monday-to-arduino.yaml
@@ -38,6 +38,8 @@ Resources:
                   - sqs:SendMessage
                   - sqs:ReceiveMessage
                   - sqs:DeleteMessage
+                  - sqs:GetQueueAttributes
+                  - sqs:PurgeQueue
                 Resource: !GetAtt SQSQueue.Arn
 
   SQSQueue:
@@ -46,7 +48,8 @@ Resources:
   LambdaForSQS:
     Type: AWS::Lambda::Function
     Properties:
-      Handler: index.handler
+      Handler: index.main
+      # source code also in the Github respository as src/monday_to_arduino.py
       Runtime: python3.9
       Role: !GetAtt LambdaForSQSExecutionRole.Arn
       Environment:
@@ -55,23 +58,34 @@ Resources:
           APIKEY: !Ref APIKEY
           SKIP_AUTHORIZATION: false
           RETURN_FULL_SQS_MESSAGE: false
+          RETURN_ONLY_MESSAGE_COUNT: true
+          ALLOW_DIAGNOSTICS: false
       Code:
         ZipFile: |
           import json
           import boto3
           import os
+          import base64
+          # import module
+          import urllib.parse
+          import re
+
+          isLambda   = "LAMBDA_RUNTIME_DIR" in os.environ
 
           class Queue():
               def __init__(self, **kwargs):
                   self.region = kwargs.get('region','us-east-1')
                   self.queue_url = kwargs.get('queue_url')
-                  self.session = boto3.session.Session()
-                  self.queue = self.session.client(
-                      service_name='sqs',
-                      region_name=self.region
+                  self.authorization_structure = dict(
+                      region_name=self.region,
+                      profile_name = None if isLambda else 'metamoneta'
                   )
+                  self.session = boto3.session.Session(**self.authorization_structure)
+                  self.queue = self.session.client('sqs')
 
               def enQueue(self, payload, **kwargs):
+                  if type(payload) in [dict, list]:
+                      payload = json.dumps(payload)
                   self.response = self.queue.send_message(QueueUrl=self.queue_url, MessageBody=payload)
                   return self.response
 
@@ -102,9 +116,19 @@ Resources:
                           self.purgeQueue()
                   return return_values
 
-              def purgeQueue(self):
-                  self.response = self.queue.purge_queue(self.queue)
+              def getQueueDepth(self,  **kwargs):
+                  self.response = self.queue.get_queue_attributes(QueueUrl=self.queue_url,
+                                                                  AttributeNames = ['ApproximateNumberOfMessages']
+                                                                  )
+                  return self.response['Attributes']['ApproximateNumberOfMessages']
 
+
+              def purgeQueue(self):
+                  try:
+                      self.response = self.queue.purge_queue(QueueUrl=self.queue_url)
+                  except self.queue.exceptions.PurgeQueueInProgress as e:
+                      self.response = {"error": str(e)}
+          # ------ end of class
           def authorized(event):
               apikey = os.environ.get('APIKEY')
               authorization_object = event['headers'].get('authorization', 'no').split()
@@ -114,8 +138,32 @@ Resources:
               else:
                   return False
 
+          def get_body(event):
+              isBase64Encoded = event.get("isBase64Encoded", False)
+              event_body_raw = event.get('body', '{}')
+              body_content_type = event['headers'].get("content-type", "text/plain")
+              event_body = base64.b64decode(event_body_raw) if isBase64Encoded else event_body_raw
+              json_pattern = '^application\/(vnd\.api\+)?json.*$'
+              is_JSON = re.match(json_pattern, body_content_type)
+              if body_content_type == "application/x-www-form-urlencoded":
+                  response = urllib.parse.parse_qs(event_body)
+                  if not response:
+                      try:
+                          response = json.loads(event_body)
+                      except:
+                          response = {}
+              elif is_JSON:
+                  response = json.loads(event_body)
+              else:
+                  response = dict(body=event_body)
+              return response
 
-          def handler(event=None, context=None):
+          def diagnostics(event, context):
+              response = dict(event)
+              response["environ"] = dict(os.environ)
+              return response
+
+          def main(event=None, context=None):
               print(json.dumps(event))
               skip_authorization = os.environ.get('SKIP_AUTHORIZATION','false').lower()=='true'
 
@@ -124,17 +172,24 @@ Resources:
                       'statusCode': 401,
                       'body': 'unauthorized'
                   }
-              event_message = event.get('body', '{}')
-              method = event['requestContext']['http']['method'].lower()
-              challenge = json.loads(event_message).get('challenge')
-
-              if challenge and method == 'post':
-                  response = dict(challenge=challenge)
+              path = event['rawPath'].lower()
+              allow_diagnostics = os.environ.get('ALLOW_DIAGNOSTICS','false').lower()=='true'
+              if allow_diagnostics and path == "/diagnostics":
+                  response = diagnostics(event, context)
                   return {
                       'statusCode': 200,
                       'body': json.dumps(response)
                   }
-              path = event['rawPath'].lower()
+              event_message = get_body(event)
+              method = event['requestContext']['http']['method'].lower()
+
+              challenge = event_message.get('challenge')
+              if challenge and method == 'post':
+                  response = event_message
+                  return {
+                      'statusCode': 200,
+                      'body': json.dumps(response)
+                  }
 
               sqs = Queue(
                   region=os.environ.get('AWS_REGION','us-east-1'),
@@ -142,13 +197,18 @@ Resources:
               )
 
               return_full_sqs_message = os.environ.get('RETURN_FULL_SQS_MESSAGE','false')=='true'
+              return_only_message_count = os.environ.get('RETURN_ONLY_MESSAGE_COUNT','true')=='true'
 
               if path == "/read" and method == 'get':
-                  messages = sqs.deQueue(
-                      return_full_sqs_message=return_full_sqs_message
-                  )
-                  response = json.dumps(messages, indent=4)
-                  response = len(messages)
+                  if return_only_message_count:
+                      response = sqs.getQueueDepth()
+                      if int(response) > 0:
+                          sqs.purgeQueue()
+                  else:
+                      messages = sqs.deQueue(
+                          return_full_sqs_message=return_full_sqs_message
+                      )
+                      response = json.dumps(messages, indent=4)
                   return {
                       'statusCode': 200,
                       'body': response
@@ -166,6 +226,7 @@ Resources:
                       'statusCode': 404,
                       'body': "not found"
                   }
+
 
   LambdaURL:
     Type: AWS::Lambda::Url
@@ -198,3 +259,6 @@ Outputs:
   APIKEY:
     Description: 'Alternatively remove the API key from the query string and place it an Authorization header like this, Authorization: APIKEY ${APIKEY}'
     Value: !Ref APIKEY
+  SQSURL:
+    Description: The URL of the SQS queue
+    Value: !GetAtt SQSQueue.QueueUrl
